--- a/app/src/main/res/layout/activity_employeelogin.xml
+++ b/app/src/main/res/layout/activity_employeelogin.xml
@@ -26,11 +26,11 @@
         android:id="@+id/txtViewThird"
         android:layout_width="300dp"
         android:layout_height="70dp"
+        android:layout_marginLeft="30dp"
         android:text="Blue Planet"
-        android:textStyle="bold|italic"
-        android:textSize="50sp"
         android:textAlignment="center"
-        android:layout_marginLeft="30dp"/>
+        android:textSize="50sp"
+        android:textStyle="bold|italic" />
 
     <TextView
         android:layout_width="300dp"
