--- a/app/src/main/res/layout/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout/activity_customer_dashboard.xml
@@ -24,19 +24,19 @@
         android:layout_marginLeft="20dp"/>
 
     <TextView
-        android:layout_width="150dp"
-        android:layout_height="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="All Along"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_marginTop="195dp"
-        android:layout_marginLeft="-5dp"/>
+        android:layout_marginLeft="50dp"/>
 
     <TextView
-        android:layout_width="150dp"
-        android:layout_height="70dp"
-        android:layout_marginLeft="-20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="220dp"
         android:text="Blue Planet"
         android:textAlignment="center"
@@ -63,8 +63,8 @@
         android:elevation="40dp">
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="115dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:src="@drawable/mineral"
             android:scaleType="fitCenter"
@@ -89,16 +89,17 @@
         android:elevation="40dp">
 
         <TextView
-            android:layout_width="120dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="105dp"
             android:textAlignment="center"
+            android:layout_marginLeft="14dp"
             android:text="Alkaline Water \nBottle"
             android:textColor="@color/black"/>
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:src="@drawable/alkaline"
             android:scaleType="centerCrop"
@@ -121,10 +122,11 @@
             android:layout_marginBottom="10dp"/>
 
         <TextView
-            android:layout_width="120dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="105dp"
             android:textAlignment="center"
+            android:layout_marginLeft="14dp"
             android:text="Slim Water \nJag Mineral"
             android:textColor="@color/black"/>
 
