--- a/app/src/main/res/layout/activity_orders_view.xml
+++ b/app/src/main/res/layout/activity_orders_view.xml
@@ -45,88 +45,6 @@
         app:layout_constraintVertical_bias="0.603"
         app:srcCompat="@drawable/profile_button" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/view_orders"
-        android:layout_width="366dp"
-        android:layout_height="132dp"
-        android:background="#D3D3D3"
-        android:clickable="true"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view"
-        app:layout_constraintVertical_bias="0.057"
-        android:onClick="orderviewDetails">
-
-        <TextView
-            android:id="@+id/orderStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="211dp"
-            android:layout_marginTop="110dp"
-            android:text=""
-            android:textSize="10dp"
-            tools:ignore="TextSizeCheck" />
-
-        <TextView
-            android:id="@+id/orderNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="13dp"
-            android:layout_marginTop="16dp"
-            android:text="09123456678"
-            android:textColor="@color/black"
-            android:textSize="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/view_orders"
-            app:layout_constraintHorizontal_bias="0.076"
-            app:layout_constraintStart_toStartOf="@+id/view_orders"
-            app:layout_constraintTop_toTopOf="@+id/view_orders"
-            tools:ignore="TextSizeCheck" />
-
-
-        <TextView
-            android:id="@+id/orderName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="13dp"
-            android:layout_marginTop="29dp"
-            android:text="Bautista, Syd Carlo A."
-            android:textColor="@color/black"
-            android:textSize="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/view_orders"
-            app:layout_constraintHorizontal_bias="0.076"
-            app:layout_constraintStart_toStartOf="@+id/view_orders"
-            app:layout_constraintTop_toTopOf="@+id/view_orders"
-            tools:ignore="TextSizeCheck" />
-
-        <TextView
-            android:id="@+id/orderAddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="13dp"
-            android:layout_marginTop="45dp"
-            android:text="Address"
-            android:textColor="@color/black"
-            android:textSize="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/view_orders"
-            app:layout_constraintHorizontal_bias="0.076"
-            app:layout_constraintStart_toStartOf="@+id/view_orders"
-            app:layout_constraintTop_toTopOf="@+id/view_orders"
-            tools:ignore="TextSizeCheck" />
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="250dp"
-            app:srcCompat="@drawable/mineral" />
-
-
-    </androidx.cardview.widget.CardView>
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
@@ -139,6 +57,15 @@
         app:layout_constraintTop_toBottomOf="@+id/view"
         app:layout_constraintVertical_bias="0.831"
         app:srcCompat="@drawable/boxicon" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="380dp"
+        android:layout_height="481dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
