--- a/app/src/main/res/layout/employeelistview.xml
+++ b/app/src/main/res/layout/employeelistview.xml
@@ -52,6 +52,37 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="16dp" />
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="87dp"
+            android:layout_height="34dp"
+            android:layout_marginStart="153dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginEnd="26dp"
+            android:layout_marginBottom="3dp"
+            android:text="Delete"
+            android:textSize="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnEdit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/email"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />
+
+        <Button
+            android:id="@+id/btnEdit"
+            android:layout_width="85dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="152dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginBottom="3dp"
+            android:text="Edit"
+            android:textSize="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/email"
+            app:layout_constraintTop_toBottomOf="@+id/btnDelete"
+            tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
