--- a/app/src/main/res/layout/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout/activity_customer_dashboard.xml
@@ -204,6 +204,8 @@
 
 
         <ImageButton
+            android:id="@+id/ordertrackbtn"
+            android:onClick="ordertrackactivity"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_gravity="end"
