--- a/app/src/main/res/layout/ordertracking.xml
+++ b/app/src/main/res/layout/ordertracking.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="140dp"
+    android:layout_height="120dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
@@ -16,12 +16,12 @@
 
 
         <TextView
-            android:id="@+id/number"
+            android:id="@+id/Tnumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="10dp"
-            android:text="Water Jug Alkaline"
+            android:text="123123"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,12 +29,12 @@
             tools:layout_editor_absoluteY="16dp" />
 
         <TextView
-            android:id="@+id/namee"
+            android:id="@+id/Tname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="30dp"
-            android:text="10 L"
+            android:text="sedsed"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,48 +43,26 @@
 
 
         <TextView
-            android:id="@+id/addresss"
-            android:layout_width="162dp"
-            android:layout_height="41dp"
+            android:id="@+id/Taddress"
+            android:layout_width="123dp"
+            android:layout_height="52dp"
             android:layout_marginStart="28dp"
             android:layout_marginTop="48dp"
-            android:text="P250.00"
+            android:text="Rizal"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/orderviewbtn"
-            android:layout_width="92dp"
-            android:layout_height="44dp"
-            android:text="View"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.83"
-            app:layout_constraintStart_toEndOf="@+id/addresss"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.115" />
-
         <TextView
-            android:id="@+id/orderStatus"
+            android:id="@+id/Tstatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="60dp"
             android:text="Status"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/addresss"
-            app:layout_constraintTop_toBottomOf="@+id/orderviewbtn" />
-
-        <TextView
-            android:id="@+id/docIDD"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/orderStatus"
-            app:layout_constraintHorizontal_bias="0.131"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addresss" />
+            app:layout_constraintHorizontal_bias="0.43"
+            app:layout_constraintStart_toEndOf="@+id/Taddress" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
